Bug: GST of all listing not showing.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,7 +51,7 @@ body {
   text-align: center;
   margin-top: 3rem;
 }
-#taxAmount {
+.taxAmount {
   display: none;
 }
 #taxEnabler {
